--- a/tilecascade.html
+++ b/tilecascade.html
@@ -8,162 +8,163 @@
   </head>
   <body>
     <div class="row">
-      <div class="tile col-sm-1 a-1"></div>
-      <div class="tile col-sm-1 a-2"></div>
-      <div class="tile col-sm-1 a-3"></div>
-      <div class="tile col-sm-1 a-4"></div>
-      <div class="tile col-sm-1 a-5"></div>
-      <div class="tile col-sm-1 a-6"></div>
-      <div class="tile col-sm-1 a-7"></div>
-      <div class="tile col-sm-1 a-8"></div>
-      <div class="tile col-sm-1 a-9"></div>
-      <div class="tile col-sm-1 a-10"></div>
-      <div class="tile col-sm-1 a-11"></div>
-      <div class="tile col-sm-1 a-12"></div>
+      <div class="tile col-sm-1 a-1 ready"></div>
+      <div class="tile col-sm-1 a-2 ready"></div>
+      <div class="tile col-sm-1 a-3 ready"></div>
+      <div class="tile col-sm-1 a-4 ready"></div>
+      <div class="tile col-sm-1 a-5 ready"></div>
+      <div class="tile col-sm-1 a-6 ready"></div>
+      <div class="tile col-sm-1 a-7 ready"></div>
+      <div class="tile col-sm-1 a-8 ready"></div>
+      <div class="tile col-sm-1 a-9 ready"></div>
+      <div class="tile col-sm-1 a-10 ready"></div>
+      <div class="tile col-sm-1 a-11 ready"></div>
+      <div class="tile col-sm-1 a-12 ready"></div>
     </div>
     <div class="row">
-      <div class="tile col-sm-1 b-1"></div>
-      <div class="tile col-sm-1 b-2"></div>
-      <div class="tile col-sm-1 b-3"></div>
-      <div class="tile col-sm-1 b-4"></div>
-      <div class="tile col-sm-1 b-5"></div>
-      <div class="tile col-sm-1 b-6"></div>
-      <div class="tile col-sm-1 b-7"></div>
-      <div class="tile col-sm-1 b-8"></div>
-      <div class="tile col-sm-1 b-9"></div>
-      <div class="tile col-sm-1 b-10"></div>
-      <div class="tile col-sm-1 b-11"></div>
-      <div class="tile col-sm-1 b-12"></div>
+      <div class="tile col-sm-1 b-1 ready"></div>
+      <div class="tile col-sm-1 b-2 ready"></div>
+      <div class="tile col-sm-1 b-3 ready"></div>
+      <div class="tile col-sm-1 b-4 ready"></div>
+      <div class="tile col-sm-1 b-5 ready"></div>
+      <div class="tile col-sm-1 b-6 ready"></div>
+      <div class="tile col-sm-1 b-7 ready"></div>
+      <div class="tile col-sm-1 b-8 ready"></div>
+      <div class="tile col-sm-1 b-9 ready"></div>
+      <div class="tile col-sm-1 b-10 ready"></div>
+      <div class="tile col-sm-1 b-11 ready"></div>
+      <div class="tile col-sm-1 b-12 ready"></div>
     </div>
     <div class="row">
-      <div class="tile col-sm-1 c-1"></div>
-      <div class="tile col-sm-1 c-2"></div>
-      <div class="tile col-sm-1 c-3"></div>
-      <div class="tile col-sm-1 c-4"></div>
-      <div class="tile col-sm-1 c-5"></div>
-      <div class="tile col-sm-1 c-6"></div>
-      <div class="tile col-sm-1 c-7"></div>
-      <div class="tile col-sm-1 c-8"></div>
-      <div class="tile col-sm-1 c-9"></div>
-      <div class="tile col-sm-1 c-10"></div>
-      <div class="tile col-sm-1 c-11"></div>
-      <div class="tile col-sm-1 c-12"></div>
+      <div class="tile col-sm-1 c-1 ready"></div>
+      <div class="tile col-sm-1 c-2 ready"></div>
+      <div class="tile col-sm-1 c-3 ready"></div>
+      <div class="tile col-sm-1 c-4 ready"></div>
+      <div class="tile col-sm-1 c-5 ready"></div>
+      <div class="tile col-sm-1 c-6 ready"></div>
+      <div class="tile col-sm-1 c-7 ready"></div>
+      <div class="tile col-sm-1 c-8 ready"></div>
+      <div class="tile col-sm-1 c-9 ready"></div>
+      <div class="tile col-sm-1 c-10 ready"></div>
+      <div class="tile col-sm-1 c-11 ready"></div>
+      <div class="tile col-sm-1 c-12 ready"></div>
     </div>
     <div class="row">
-      <div class="tile col-sm-1 d-1"></div>
-      <div class="tile col-sm-1 d-2"></div>
-      <div class="tile col-sm-1 d-3"></div>
-      <div class="tile col-sm-1 d-4"></div>
-      <div class="tile col-sm-1 d-5"></div>
-      <div class="tile col-sm-1 d-6"></div>
-      <div class="tile col-sm-1 d-7"></div>
-      <div class="tile col-sm-1 d-8"></div>
-      <div class="tile col-sm-1 d-9"></div>
-      <div class="tile col-sm-1 d-10"></div>
-      <div class="tile col-sm-1 d-11"></div>
-      <div class="tile col-sm-1 d-12"></div>
+      <div class="tile col-sm-1 d-1 ready"></div>
+      <div class="tile col-sm-1 d-2 ready"></div>
+      <div class="tile col-sm-1 d-3 ready"></div>
+      <div class="tile col-sm-1 d-4 ready"></div>
+      <div class="tile col-sm-1 d-5 ready"></div>
+      <div class="tile col-sm-1 d-6 ready"></div>
+      <div class="tile col-sm-1 d-7 ready"></div>
+      <div class="tile col-sm-1 d-8 ready"></div>
+      <div class="tile col-sm-1 d-9 ready"></div>
+      <div class="tile col-sm-1 d-10 ready"></div>
+      <div class="tile col-sm-1 d-11 ready"></div>
+      <div class="tile col-sm-1 d-12 ready"></div>
     </div>
     <div class="row">
-      <div class="tile col-sm-1 e-1"></div>
-      <div class="tile col-sm-1 e-2"></div>
-      <div class="tile col-sm-1 e-3"></div>
-      <div class="tile col-sm-1 e-4"></div>
-      <div class="tile col-sm-1 e-5"></div>
-      <div class="tile col-sm-1 e-6"></div>
-      <div class="tile col-sm-1 e-7"></div>
-      <div class="tile col-sm-1 e-8"></div>
-      <div class="tile col-sm-1 e-9"></div>
-      <div class="tile col-sm-1 e-10"></div>
-      <div class="tile col-sm-1 e-11"></div>
-      <div class="tile col-sm-1 e-12"></div>
+      <div class="tile col-sm-1 e-1 ready"></div>
+      <div class="tile col-sm-1 e-2 ready"></div>
+      <div class="tile col-sm-1 e-3 ready"></div>
+      <div class="tile col-sm-1 e-4 ready"></div>
+      <div class="tile col-sm-1 e-5 ready"></div>
+      <div class="tile col-sm-1 e-6 ready"></div>
+      <div class="tile col-sm-1 e-7 ready"></div>
+      <div class="tile col-sm-1 e-8 ready"></div>
+      <div class="tile col-sm-1 e-9 ready"></div>
+      <div class="tile col-sm-1 e-10 ready"></div>
+      <div class="tile col-sm-1 e-11 ready"></div>
+      <div class="tile col-sm-1 e-12 ready"></div>
     </div>
     <div class="row">
-      <div class="tile col-sm-1 f-1"></div>
-      <div class="tile col-sm-1 f-2"></div>
-      <div class="tile col-sm-1 f-3"></div>
-      <div class="tile col-sm-1 f-4"></div>
-      <div class="tile col-sm-1 f-5"></div>
-      <div class="tile col-sm-1 f-6"></div>
-      <div class="tile col-sm-1 f-7"></div>
-      <div class="tile col-sm-1 f-8"></div>
-      <div class="tile col-sm-1 f-9"></div>
-      <div class="tile col-sm-1 f-10"></div>
-      <div class="tile col-sm-1 f-11"></div>
-      <div class="tile col-sm-1 f-12"></div>
+      <div class="tile col-sm-1 f-1 ready"></div>
+      <div class="tile col-sm-1 f-2 ready"></div>
+      <div class="tile col-sm-1 f-3 ready"></div>
+      <div class="tile col-sm-1 f-4 ready"></div>
+      <div class="tile col-sm-1 f-5 ready"></div>
+      <div class="tile col-sm-1 f-6 ready"></div>
+      <div class="tile col-sm-1 f-7 ready"></div>
+      <div class="tile col-sm-1 f-8 ready"></div>
+      <div class="tile col-sm-1 f-9 ready"></div>
+      <div class="tile col-sm-1 f-10 ready"></div>
+      <div class="tile col-sm-1 f-11 ready"></div>
+      <div class="tile col-sm-1 f-12 ready"></div>
     </div>
     <div class="row">
-      <div class="tile col-sm-1 g-1"></div>
-      <div class="tile col-sm-1 g-2"></div>
-      <div class="tile col-sm-1 g-3"></div>
-      <div class="tile col-sm-1 g-4"></div>
-      <div class="tile col-sm-1 g-5"></div>
-      <div class="tile col-sm-1 g-6"></div>
-      <div class="tile col-sm-1 g-7"></div>
-      <div class="tile col-sm-1 g-8"></div>
-      <div class="tile col-sm-1 g-9"></div>
-      <div class="tile col-sm-1 g-10"></div>
-      <div class="tile col-sm-1 g-11"></div>
-      <div class="tile col-sm-1 g-12"></div>
+      <div class="tile col-sm-1 g-1 ready"></div>
+      <div class="tile col-sm-1 g-2 ready"></div>
+      <div class="tile col-sm-1 g-3 ready"></div>
+      <div class="tile col-sm-1 g-4 ready"></div>
+      <div class="tile col-sm-1 g-5 ready"></div>
+      <div class="tile col-sm-1 g-6 ready"></div>
+      <div class="tile col-sm-1 g-7 ready"></div>
+      <div class="tile col-sm-1 g-8 ready"></div>
+      <div class="tile col-sm-1 g-9 ready"></div>
+      <div class="tile col-sm-1 g-10 ready"></div>
+      <div class="tile col-sm-1 g-11 ready"></div>
+      <div class="tile col-sm-1 g-12 ready"></div>
     </div>
     <div class="row">
-      <div class="tile col-sm-1 h-1"></div>
-      <div class="tile col-sm-1 h-2"></div>
-      <div class="tile col-sm-1 h-3"></div>
-      <div class="tile col-sm-1 h-4"></div>
-      <div class="tile col-sm-1 h-5"></div>
-      <div class="tile col-sm-1 h-6"></div>
-      <div class="tile col-sm-1 h-7"></div>
-      <div class="tile col-sm-1 h-8"></div>
-      <div class="tile col-sm-1 h-9"></div>
-      <div class="tile col-sm-1 h-10"></div>
-      <div class="tile col-sm-1 h-11"></div>
-      <div class="tile col-sm-1 h-12"></div>
+      <div class="tile col-sm-1 h-1 ready"></div>
+      <div class="tile col-sm-1 h-2 ready"></div>
+      <div class="tile col-sm-1 h-3 ready"></div>
+      <div class="tile col-sm-1 h-4 ready"></div>
+      <div class="tile col-sm-1 h-5 ready"></div>
+      <div class="tile col-sm-1 h-6 ready"></div>
+      <div class="tile col-sm-1 h-7 ready"></div>
+      <div class="tile col-sm-1 h-8 ready"></div>
+      <div class="tile col-sm-1 h-9 ready"></div>
+      <div class="tile col-sm-1 h-10 ready"></div>
+      <div class="tile col-sm-1 h-11 ready"></div>
+      <div class="tile col-sm-1 h-12 ready"></div>
     </div>
     <div class="row">
-      <div class="tile col-sm-1 i-1"></div>
-      <div class="tile col-sm-1 i-2"></div>
-      <div class="tile col-sm-1 i-3"></div>
-      <div class="tile col-sm-1 i-4"></div>
-      <div class="tile col-sm-1 i-5"></div>
-      <div class="tile col-sm-1 i-6"></div>
-      <div class="tile col-sm-1 i-7"></div>
-      <div class="tile col-sm-1 i-8"></div>
-      <div class="tile col-sm-1 i-9"></div>
-      <div class="tile col-sm-1 i-10"></div>
-      <div class="tile col-sm-1 i-11"></div>
-      <div class="tile col-sm-1 i-12"></div>
+      <div class="tile col-sm-1 i-1 ready"></div>
+      <div class="tile col-sm-1 i-2 ready"></div>
+      <div class="tile col-sm-1 i-3 ready"></div>
+      <div class="tile col-sm-1 i-4 ready"></div>
+      <div class="tile col-sm-1 i-5 ready"></div>
+      <div class="tile col-sm-1 i-6 ready"></div>
+      <div class="tile col-sm-1 i-7 ready"></div>
+      <div class="tile col-sm-1 i-8 ready"></div>
+      <div class="tile col-sm-1 i-9 ready"></div>
+      <div class="tile col-sm-1 i-10 ready"></div>
+      <div class="tile col-sm-1 i-11 ready"></div>
+      <div class="tile col-sm-1 i-12 ready"></div>
     </div>
     <div class="row">
-      <div class="tile col-sm-1 j-1"></div>
-      <div class="tile col-sm-1 j-2"></div>
-      <div class="tile col-sm-1 j-3"></div>
-      <div class="tile col-sm-1 j-4"></div>
-      <div class="tile col-sm-1 j-5"></div>
-      <div class="tile col-sm-1 j-6"></div>
-      <div class="tile col-sm-1 j-7"></div>
-      <div class="tile col-sm-1 j-8"></div>
-      <div class="tile col-sm-1 j-9"></div>
-      <div class="tile col-sm-1 j-10"></div>
-      <div class="tile col-sm-1 j-11"></div>
-      <div class="tile col-sm-1 j-12"></div>
+      <div class="tile col-sm-1 j-1 ready"></div>
+      <div class="tile col-sm-1 j-2 ready"></div>
+      <div class="tile col-sm-1 j-3 ready"></div>
+      <div class="tile col-sm-1 j-4 ready"></div>
+      <div class="tile col-sm-1 j-5 ready"></div>
+      <div class="tile col-sm-1 j-6 ready"></div>
+      <div class="tile col-sm-1 j-7 ready"></div>
+      <div class="tile col-sm-1 j-8 ready"></div>
+      <div class="tile col-sm-1 j-9 ready"></div>
+      <div class="tile col-sm-1 j-10 ready"></div>
+      <div class="tile col-sm-1 j-11 ready"></div>
+      <div class="tile col-sm-1 j-12 ready"></div>
     </div>
     <div class="row">
-      <div class="tile col-sm-1 k-1"></div>
-      <div class="tile col-sm-1 k-2"></div>
-      <div class="tile col-sm-1 k-3"></div>
-      <div class="tile col-sm-1 k-4"></div>
-      <div class="tile col-sm-1 k-5"></div>
-      <div class="tile col-sm-1 k-6"></div>
-      <div class="tile col-sm-1 k-7"></div>
-      <div class="tile col-sm-1 k-8"></div>
-      <div class="tile col-sm-1 k-9"></div>
-      <div class="tile col-sm-1 k-10"></div>
-      <div class="tile col-sm-1 k-11"></div>
-      <div class="tile col-sm-1 k-12"></div>
+      <div class="tile col-sm-1 k-1 ready"></div>
+      <div class="tile col-sm-1 k-2 ready"></div>
+      <div class="tile col-sm-1 k-3 ready"></div>
+      <div class="tile col-sm-1 k-4 ready"></div>
+      <div class="tile col-sm-1 k-5 ready"></div>
+      <div class="tile col-sm-1 k-6 ready"></div>
+      <div class="tile col-sm-1 k-7 ready"></div>
+      <div class="tile col-sm-1 k-8 ready"></div>
+      <div class="tile col-sm-1 k-9 ready"></div>
+      <div class="tile col-sm-1 k-10 ready"></div>
+      <div class="tile col-sm-1 k-11 ready"></div>
+      <div class="tile col-sm-1 k-12 ready"></div>
     </div>
     <div class="row">
 
     </div>
   </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src= "tilecascade.js"></script>
 </html>
