--- a/tilecascade.html
+++ b/tilecascade.html
@@ -162,9 +162,12 @@
       <div class="tile col-sm-1 k-12 ready"></div>
     </div>
     <div class="row">
-
+      <div class="col-sm-3"></div>
+      <div class="col-sm-6">
+        <p>Click some Tiles. Press Space Bar to Reset</p>
+      </div>
     </div>
   </body>
-  
+
   <script src= "tilecascade.js"></script>
 </html>
