--- a/tilecascade.html
+++ b/tilecascade.html
@@ -163,8 +163,8 @@
     </div>
     <div class="row">
       <div class="col-sm-3"></div>
-      <div class="col-sm-6">
-        <p>Click some Tiles. Press Space Bar to Reset</p>
+      <div class="col-sm-7">
+        <p>Click one or more tiles. Press Space Bar to Reset</p>
       </div>
     </div>
   </body>
